--- a/templates/home.html
+++ b/templates/home.html
@@ -24,6 +24,7 @@
           <input type="text" class="form-control" placeholder="Search for a Wall" name="name">
         </div>
         <input type="submit" name="b" class="btn btn-success" value="search">
+	<input type="submit" name="b" class="btn btn-info" value="Create a Wall!">
       </form>
 	</span>
     <span style="line-height:5px;">
