added more to home

--- a/templates/home.html
+++ b/templates/home.html
@@ -18,10 +18,10 @@
 	<li><a href="/inbox">Messages <span class="sr-only">(current)</span></a></li>
 	<li><a href="#">Link <span class="sr-only">(current)</span></a></li>
     </ul>
-	<span style="line-height:5x;">
+	<span style="line-height:5px;">
 	<form class="navbar-form navbar-left" role="search">
         <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search for a Wall" name="name">
+          <input type="text" class="form-control" placeholder="Search for a Wall" name="name" style="width:300px;">
         </div>
         <input type="submit" name="b" class="btn btn-success" value="search">
 	<input type="submit" name="b" class="btn btn-info" value="Create a Wall!">
@@ -37,7 +37,38 @@
   </div>
 </nav>
 
+<body style="padding-top:70px">
+<div class="container-fluid">
+  
 
+<div class="col-lg-8">
+<h1>Stall Wall Stuff</h1>
+
+
+</div>
+
+
+
+<div class="row">
+        <div class="col-lg-4">
+		<div class="jumbotron jumbotron" style="height:1000px; background-color: #0B3861;">
+		<div class="container-fixed-right">
+		<h2>Instant Messaging</h2>
+		</div>
+		</div>
+	    
+	</div>
+</div>
+
+</div>
+
+
+
+
+</body>
+
+
+<div class="verticalLine" style="border-left: thick solid #ff0000; height:1000px;">
 
 
 
