added base for messages, walls, edited test

--- a/templates/walls.html
+++ b/templates/walls.html
@@ -15,8 +15,8 @@
   <div class="container">
     <ul class="nav navbar-nav">
 	<li><a href="/home">Home <span class="sr-only">(current)</span></a></li>
-	<li class="active"><a href="/messages">Messages <span class="sr-only">(current)</span></a></li>
-	<li><a href="/walls">Walls <span class="sr-only">(current)</span></a></li>
+	<li><a href="/messages">Messages <span class="sr-only">(current)</span></a></li>
+	<li class="active"><a href="/walls">Walls <span class="sr-only">(current)</span></a></li>
     </ul>
 	<span style="line-height:5px;">
 	<form class="navbar-form navbar-left" role="search">
@@ -41,7 +41,10 @@
 <body style="padding-top:70px">
 <div class="container-fluid">
 
-<h1>Hello World</h1>
+<h1>Public Bathroom</h1>
+
+
+
 
 
 
@@ -62,4 +65,3 @@
 </div>
 </body>
 </html>
-
