--- a/templates/home.html
+++ b/templates/home.html
@@ -15,13 +15,13 @@
   <div class="container">
     <ul class="nav navbar-nav">
 	<li class="active"><a href="/home">Home <span class="sr-only">(current)</span></a></li>
-	<li><a href="/inbox">Messages <span class="sr-only">(current)</span></a></li>
-	<li><a href="#">Link <span class="sr-only">(current)</span></a></li>
+	<li><a href="/messages">Messages <span class="sr-only">(current)</span></a></li>
+	<li><a href="/walls">Walls <span class="sr-only">(current)</span></a></li>
     </ul>
 	<span style="line-height:5px;">
 	<form class="navbar-form navbar-left" role="search">
         <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search for a Wall" name="name" style="width:300px;">
+          <input type="text" class="form-control" placeholder="Search for a Wall" name="name" style="width:150px;">
         </div>
         <input type="submit" name="b" class="btn btn-success" value="search">
 	<input type="submit" name="b" class="btn btn-info" value="Create a Wall!">
@@ -36,6 +36,7 @@
 	</span>
   </div>
 </nav>
+</head>
 
 <body style="padding-top:70px">
 <div class="container-fluid">
@@ -56,7 +57,6 @@
 		<h2>Instant Messaging</h2>
 		</div>
 		</div>
-	    
 	</div>
 </div>
 
