--- a/templates/create.html
+++ b/templates/create.html
@@ -14,7 +14,7 @@
 	</div>
   <div class="container">
     <ul class="nav navbar-nav">
-	<li class="active"><a href="/home">Home <span class="sr-only">(current)</span></a></li>
+	<li><a href="/home">Home <span class="sr-only">(current)</span></a></li>
 	<li><a href="/messages">Messages <span class="sr-only">(current)</span></a></li>
 	<li><a href="/walls">Walls <span class="sr-only">(current)</span></a></li>
     </ul>
@@ -40,40 +40,3 @@
 
 <body style="padding-top:70px">
 <div class="container-fluid">
-  
-<div class="row">
-<div class="col-lg-8">
-<h1>Stall Wall Stuff</h1>
-
-
-</div>
-
-
-
-
-        <div class="col-lg-4">
-		<div class="jumbotron jumbotron" style="height:1000px; background-color: #0B3861;">
-		<div class="container-fixed-right">
-		<h2>Instant Messaging</h2>
-		</div>
-		</div>
-	</div>
-</div>
-
-</div>
-
-
-
-
-</body>
-
-<!
-<div class="verticalLine" style="border-left: thick solid #ff0000; height:1000px;">
-
-
-
-
-
-
-
-</html>
