--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
 
 <nav class="navbar navbar-default navbar-fixed-top">
 	<div class="navbar-header">
-	<a class="navbar-brand" href="#">ShitChat</a>
+	<strong><a class="navbar-brand" href="#">ShitChat</a></strong>
 	</div>
   <div class="container">
     <ul class="nav navbar-nav">
