playing with background options

--- a/templates/login.html
+++ b/templates/login.html
@@ -23,7 +23,7 @@
 </nav>
 </head>
 
-<body style="padding-top:70px">
+<body style="padding-top:70px; background-image:url('./static/white_tiles.png');">
 <div class="container-fluid">
 
 <center><div class="jumbotron" style="max-width:730px; background-color: #0B3861;">
