played with home and login

--- a/templates/login.html
+++ b/templates/login.html
@@ -10,11 +10,12 @@
 
 <nav class="navbar navbar-default navbar-fixed-top">
 	<div class="navbar-header">
-	<strong><a class="navbar-brand" href="#">ShitChat</a></strong>
+	<a class="navbar-brand" href="#"><strong>ShitChat</strong></a>
 	</div>
   <div class="container">
     <span style="line-height:5px;">
           <form class="navbar-form navbar-right" method="POST">
+	<p class="navbar-text">Currently __ users Poopin</p>
             <input type="submit" name="b" class="btn btn-info" value="Sign Up">
 	    <input type="submit" name="b" class="btn btn-primary" value="About">
           </form>
@@ -23,11 +24,11 @@
 </nav>
 </head>
 
-<body style="padding-top:70px; background-image:url('./static/white_tiles.png');">
+<body style="padding-top:70px; background-image:url('./static/TextureUseamlessUtileUfloorUbu.jpg');">
 <div class="container-fluid">
 
 <center><div class="jumbotron" style="max-width:730px; background-color: #0B3861;">
-        <h2>Log In</h2>
+        <h2>Log In</h2><br>
         <form role="form" class="form-horizontal" method="POST">
           <div class="form-group">
         	   <p><input type="text" class="form-control" name="email" placeholder="Email"></p>
