--- a/templates/home.html
+++ b/templates/home.html
@@ -43,7 +43,40 @@
   
 <div class="row">
 <div class="col-lg-8">
-<h1>Stall Wall Stuff</h1>
+<h1>Trending Stall Walls</h1>
+
+<div class="list-group">
+  <a href="#" class="list-group-item">
+    <h4 class="list-group-item-heading">List group item heading</h4>
+    <p class="list-group-item-text">...</p>
+  </a>
+<a href="#" class="list-group-item">
+	<span class="badge" style="background-color: #088A29;">1493</span>
+    <h4 class="list-group-item-heading">Example Stall Wall That I played around with</h4>
+    <p class="list-group-item-text">On this stall wall, users do nothing but draw penises</p><br>
+    <p>Tags: <span style="background-color: #0B3861;" class="label label-default">Drawing</span> <span class="label label-default" style="background-color: #0B3861;">Penises</span></p>
+  </a>
+<a href="#" class="list-group-item">
+    <h4 class="list-group-item-heading">List group item heading</h4>
+    <p class="list-group-item-text">...</p>
+  </a>
+<a href="#" class="list-group-item">
+    <h4 class="list-group-item-heading">Example Stall Wall</h4>
+    <p class="list-group-item-text">On this stall wall, users do nothing but draw penises</p>
+  </a>
+<a href="#" class="list-group-item">
+    <h4 class="list-group-item-heading">Example Stall Wall</h4>
+    <p class="list-group-item-text">On this stall wall, users do nothing but draw penises</p>
+  </a>
+<a href="#" class="list-group-item">
+    <h4 class="list-group-item-heading">Example Stall Wall</h4>
+    <p class="list-group-item-text">On this stall wall, users do nothing but draw penises</p>
+  </a>
+<a href="#" class="list-group-item">
+    <h4 class="list-group-item-heading">Example Stall Wall</h4>
+    <p class="list-group-item-text">On this stall wall, users do nothing but draw penises</p>
+  </a>
+</div>
 
 
 </div>
