--- a/templates/register.html
+++ b/templates/register.html
@@ -15,6 +15,7 @@
   <div class="container">
     <span style="line-height:5px;">
           <form class="navbar-form navbar-right" method="POST">
+	<p class="navbar-text">Currently __ users Poopin</p>
             <input type="submit" name="b" class="btn btn-info" value="Log In">
 	    <input type="submit" name="b" class="btn btn-primary" value="About">
           </form>
@@ -23,7 +24,7 @@
 </nav>
 </head>
 
-<body style="padding-top:70px">
+<body style="padding-top:70px; background-image:url('./static/TextureUseamlessUtileUfloorUbu.jpg');">
 <div class="container-fluid">
 <center>
  <div class="jumbotron" style="max-width:730px; background-color: #0B3861;">
