--- a/templates/create.html
+++ b/templates/create.html
@@ -40,3 +40,15 @@
 
 <body style="padding-top:70px">
 <div class="container-fluid">
+<div class="row">
+<div class="col-sm-3"></div>
+<center><div class="col-sm-6">
+<img src="./static/obn1.jpg" class="img-responsive" style="width:600px; height:800px;">
+
+</div>
+</div></div>
+
+
+
+</body>
+</html>
