--- a/templates/home.html
+++ b/templates/home.html
@@ -20,7 +20,7 @@
 	<li><a href="/walls">Walls <span class="sr-only">(current)</span></a></li>
     </ul>
 	<span style="line-height:5px;">
-	<form class="navbar-form navbar-left" role="search">
+	<form class="navbar-form navbar-left" role="search" method="POST">
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search for a Wall" name="name" style="width:150px;">
         </div>
