--- a/templates/home.html
+++ b/templates/home.html
@@ -47,6 +47,21 @@
 <h1>Trending Stall Walls</h1>
 
 <div class="list-group">
+  {% for w in walls %}
+  <a href="/wall/{{w['wall_id']}}" class="list-group-item">
+    <span class="badge" style="background-color: #088A29;">{{w['up_votes']}}</span>
+    <h4 class="list-group-item-heading">{{w['name']}}</h4>
+    <p class="list-group-item-text">{{w['description']}}</p><br>
+    <p>Tags: {% for tag in w['tags'] %}
+      <span style="background-color: #0B3861;" class="label label-default">{{tag}}</span>
+      {% endfor %}
+    </p>
+  </a>
+  {% endfor %}
+</div>
+
+<!--
+<div class="list-group">
   <a href="#" class="list-group-item">
     <h4 class="list-group-item-heading">List group item heading</h4>
     <p class="list-group-item-text">...</p>
@@ -79,8 +94,10 @@
   </a>
 </div>
 
-</div>
 
+-->
+
+</div>
 
 
 
@@ -92,6 +109,8 @@
 		</div>
 	</div>
 </div>
+
+>
 
 </div>
 
