--- a/templates/login.html
+++ b/templates/login.html
@@ -15,7 +15,7 @@
   <div class="container">
     <span style="line-height:5px;">
           <form class="navbar-form navbar-right" method="POST">
-	<p class="navbar-text">Currently __ users Poopin</p>
+	<p class="navbar-text">Currently {{logged_in}} users Poopin</p>
             <input type="submit" name="b" class="btn btn-info" value="Sign Up">
 	    <input type="submit" name="b" class="btn btn-primary" value="About">
           </form>
