added some stall photos

--- a/templates/create.html
+++ b/templates/create.html
@@ -38,12 +38,13 @@
 </nav>
 </head>
 
-<body style="padding-top:70px">
+<body style="padding-top:70px; background-image:url('./static/IMG_0319.JPG'); background-size: cover; background-repeat: no-repeat; background-position: center center;">
 <div class="container-fluid">
 <div class="row">
-<div class="col-sm-3"></div>
-<center><div class="col-sm-6">
-<img src="./static/obn1.jpg" class="img-responsive" style="width:600px; height:800px;">
+<div width="400px"></div>
+<div>
+<h1 style="font-family: 'Comic Sans MS', cursive, sans-serif;">Hello World</h1>
+
 
 </div>
 </div></div>
