--- a/templates/stall.html
+++ b/templates/stall.html
@@ -43,8 +43,32 @@
 <div class="row">
 <div class="col-lg-3"><p></p></div>
 <div class="col-lg-6">
-<div class="jumbotron" style="background: rgba(100, 100, 100, 0.2);">
-<h1 style="font-family: 'Comic Sans MS', cursive, sans-serif;">     Hello World</h1>
+<div class="jumbotron" style="background: rgba(100, 100, 100, 0.1); border: 0px; margin-top: 0px;">
+<center>
+<h3>Sample Stall Wall</h3>
+</center>
+<p style="font-family: 'Comic Sans MS', cursive, sans-serif;">Hello World</p>
+<p style="font-family: 'Comic Sans MS', cursive, sans-serif;">Hello World</p>
+
+<p style="font-family: 'Comic Sans MS', cursive, sans-serif;">Hello World</p>
+<p style="font-family: 'Comic Sans MS', cursive, sans-serif;">Hello World</p>
+<p style="font-family: 'Comic Sans MS', cursive, sans-serif;">Hello World</p>
+<p style="font-family: 'Comic Sans MS', cursive, sans-serif;">Hello World</p>
+<p style="font-family: 'Comic Sans MS', cursive, sans-serif;">Hello World</p>
+<p style="font-family: 'Comic Sans MS', cursive, sans-serif;">Hello World</p>
+<p style="font-family: 'Comic Sans MS', cursive, sans-serif;">Hello World</p>
+<p style="font-family: 'Comic Sans MS', cursive, sans-serif;">Hello World</p>
+<p style="font-family: 'Comic Sans MS', cursive, sans-serif;">Hello World</p>
+<p style="font-family: 'Comic Sans MS', cursive, sans-serif;">Hello World</p>
+<p style="font-family: 'Comic Sans MS', cursive, sans-serif;">Hello World</p>
+<p style="font-family: 'Comic Sans MS', cursive, sans-serif;">Hello World</p>
+<p style="font-family: 'Comic Sans MS', cursive, sans-serif;">Hello World</p>
+<p style="font-family: 'Comic Sans MS', cursive, sans-serif;">Hello World</p>
+<p style="font-family: 'Comic Sans MS', cursive, sans-serif;">Hello World</p>
+<p style="font-family: 'Comic Sans MS', cursive, sans-serif;">Hello World</p>
+</div>
+<div class="jumbotron" style="background: rgba(100, 100, 100, 0.1); border: 0px; margin-top: 0px;">
+<p><input type="text" class="form-control" placeholder="What's Poopin'?" name="post"></p>
 </div>
 
 
