added scrolling and colors

--- a/templates/stall.html
+++ b/templates/stall.html
@@ -46,7 +46,7 @@
 <div class="row">
 <div class="col-lg-3"><p></p></div>
 <div class="col-lg-6">
-<div class="jumbotron" style="background: rgba(100, 100, 100, 0.1); border: 0px; margin-top: 0px;">
+<div class="jumbotron" style="background: rgba(100, 100, 100, 0.1); border: 0px; margin-top: 0px; height: 100%; overflow: scroll;">
 <center>
 <h3>Sample Stall Wall</h3>
 </center>
@@ -75,9 +75,11 @@ down vote
 I think for your purpose it'd be best to only worry about affix for the side nav, and use CSS positioning for your Jumbotron (just like Bootstrap does for the navbar at the top).
 
 For the jumbotron, set the position to fixed and give it an explicit top (50px is the height of the navbar above it), set the width to 100% if you want it to stretch across the viewport, and give it an explicit height. Then set the z-index to a value higher than 1 and less than 1030 (the z-index given to the navbar by Bootstrap). This will make sure your content scrolls behind your jumbotron.</p>
+
 <hr>
-<h5><input type="text" class="form-control" placeholder="What's Poopin'?" name="post"> <input type="submit" name="b" class="btn btn-primary" value="Post"></h5>
-<h5><input id="color" class="color"></h5>
+<h5>Post Color: <input class="color" value="000000" name="color"></h5>
+<h5><input type="text" class="form-control" placeholder="What's Poopin'?" name="post"> </h5><h5><input type="submit" name="b" class="btn btn-success" value="Post"></h5>
+
 </div>
 
 
@@ -85,6 +87,6 @@ For the jumbotron, set the position to fixed and give it an explicit top (50px i
 </div></div>
 
 
-<script type="text/javascript" src="../jscolor/jscolor.js"></script>
+<script type="text/javascript" src="../static/js/jscolor/jscolor.js"></script>
 </body>
 </html>
