--- a/templates/stall.html
+++ b/templates/stall.html
@@ -38,7 +38,7 @@
 </nav>
 </head>
 
-<body style="padding-top:70px; background-image:url('./static/IMG_0326 copy.jpg'); background-size: cover; background-repeat: no-repeat; background-position: center center; -webkit-background-size: cover;
+<body style="padding-top:70px; background-image:url('../static/IMG_0326.jpg'); background-size: cover; background-repeat: no-repeat; background-position: center center; -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;">
