--- a/templates/stall.html
+++ b/templates/stall.html
@@ -48,37 +48,20 @@
 <div class="col-lg-6">
 <div class="jumbotron" style="background: rgba(100, 100, 100, 0.1); border: 0px; margin-top: 0px; height: 100%; overflow: scroll;">
 <center>
-<h3>Sample Stall Wall</h3>
+<h2>{{wall['name']}}</h2>
+<h4>{{wall['description']}}</h4>
+<h6>{{wall['up_votes']}} Up Votes </h6>
 </center>
-<p style="font-family: 'Comic Sans MS', cursive, sans-serif;">Hello World</p>
-<p style="font-family: 'Comic Sans MS', cursive, sans-serif;">Hello World</p>
-<p style="font-family: 'Comic Sans MS', cursive, sans-serif;">Hello World</p>
 
-<p style="font-family: 'Comic Sans MS', cursive, sans-serif;">Hello World</p>
-<p style="font-family: 'Comic Sans MS', cursive, sans-serif;">Hello World</p>
-<p style="font-family: 'Comic Sans MS', cursive, sans-serif;">Hello World</p>
-<p style="font-family: 'Comic Sans MS', cursive, sans-serif; color: #00ff00;">Hello World</p>
-<p style="font-family: 'Comic Sans MS', cursive, sans-serif;">Hello World</p>
-<p style="font-family: 'Comic Sans MS', cursive, sans-serif;">Hello World</p>
-<p style="font-family: 'Comic Sans MS', cursive, sans-serif;">Hello World</p>
-<p style="font-family: 'Comic Sans MS', cursive, sans-serif;">Hello World</p>
-<p style="font-family: 'Comic Sans MS', cursive, sans-serif;">Hello World</p>
-<p style="font-family: 'Comic Sans MS', cursive, sans-serif;">Hello World</p>
-<p style="font-family: 'Comic Sans MS', cursive, sans-serif;">Hello World</p>
-<p style="font-family: 'Comic Sans MS', cursive, sans-serif;">Hello World</p>
-<p style="font-family: 'Comic Sans MS', cursive, sans-serif;">Hello World</p>
-<p style="font-family: 'Comic Sans MS', cursive, sans-serif;">Hello World</p>
-<p style="font-family: 'Comic Sans MS', cursive, sans-serif;">Hello World</p>
-<p style="font-family: 'Comic Sans MS', cursive, sans-serif;">Hello World 
-0
-down vote
-I think for your purpose it'd be best to only worry about affix for the side nav, and use CSS positioning for your Jumbotron (just like Bootstrap does for the navbar at the top).
+{% for comment in wall['comments'] %}
+<p style="font-family: 'Comic Sans MS', cursive, sans-serif; color: #{{comment['color']}};">{{comment['comment']}} by {{comment['user_name']}} at {{comment['time']}} on {{comment['date']}}</p>
+{% endfor %}
 
-For the jumbotron, set the position to fixed and give it an explicit top (50px is the height of the navbar above it), set the width to 100% if you want it to stretch across the viewport, and give it an explicit height. Then set the z-index to a value higher than 1 and less than 1030 (the z-index given to the navbar by Bootstrap). This will make sure your content scrolls behind your jumbotron.</p>
-
+<form method="POST">
 <hr>
 <h5>Post Color: <input class="color" value="000000" name="color"></h5>
 <h5><input type="text" class="form-control" placeholder="What's Poopin'?" name="post"> </h5><h5><input type="submit" name="b" class="btn btn-success" value="Post"></h5>
+</form>
 
 </div>
 
