--- a/templates/stall.html
+++ b/templates/stall.html
@@ -60,13 +60,9 @@
 <div class="jumbotron" style="background: rgba(100, 100, 100, 0.1); border: 0px; margin-top: 0px; height: 100%; overflow: scroll;">
 <center>
  <form method="POST"><h2><span class="label label-success" style="float: left;">{{wall['up_votes']}}</span>{{wall['name']}} Name 
-{% if upped == True %}
-<button type="submit" value="up_vote" class="btn btn-lg btn-success" name="b" style="float: right;" disabled>
-{% endif %}
 {% if upped == False %}
-<button type="submit" value="up_vote" class="btn btn-lg btn-success" name="b" style="float: right;">
-{% endif %}
-<span class="glyphicon glyphicon-arrow-up"></span><span class="glyphicon glyphicon-thumbs-up"></span></button></h2></form>
+<button type="submit" value="up_vote" class="btn btn-lg btn-success" name="b" style="float: right;"><span class="glyphicon glyphicon-arrow-up"></span><span class="glyphicon glyphicon-thumbs-up"></span></button>
+{% endif %}</h2></form>
 </center>
 
 {% for comment in wall['comments'] %}
