played with some stuff, styled search results

--- a/templates/create.html
+++ b/templates/create.html
@@ -10,7 +10,7 @@
 
 <nav class="navbar navbar-default navbar-fixed-top">
 	<div class="navbar-header">
-	<a class="navbar-brand" href="#">ShitChat</a>
+	<a class="navbar-brand" href="#"><strong>ShitChat</strong></a>
 	</div>
   <div class="container">
     <ul class="nav navbar-nav">
@@ -50,7 +50,7 @@
           <div class="form-group">
         	   <p><input type="text" class="form-control" name="name" placeholder="Wall Name" required></p>
         	   <p><textarea class="form-control" name="description" placeholder="Description" required></textarea></p>
-		   <h4><input type="radio" name="type" value="writing" checked> Writting Wall</h4><h4> <input type="radio" name="type" value="drawing"> Drawing Wall</h4>
+		   <h4><input type="radio" name="type" value="writing" checked> Writting Wall &nbsp;&nbsp;&nbsp; <input type="radio" name="type" value="drawing"> Drawing Wall</h4>
 		   <h4>Tags:</h4>
 		   <div class="col-sm-6">
 			<p><input type="text" class="form-control" name="tag1"></p>
