--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,7 @@
 
 <nav class="navbar navbar-default navbar-fixed-top">
 	<div class="navbar-header">
-	<strong><a class="navbar-brand" href="#">ShitChat</a></strong>
+	<a class="navbar-brand" href="#"><strong>ShitChat</strong></a>
 	</div>
   <div class="container">
     <ul class="nav navbar-nav">
@@ -53,7 +53,7 @@
     <h4 class="list-group-item-heading">{{w['name']}}</h4>
     <p class="list-group-item-text">{{w['description']}}</p><br>
     <p>Tags: {% for tag in w['tags'] %}
-      <span style="background-color: #0B3861;" class="label label-default">{{tag}}</span>
+      <span style="background-color: #0B3861;" class="label label-default">{{tag}}</span> 
       {% endfor %}
     </p>
   </a>
