--- a/templates/messages.html
+++ b/templates/messages.html
@@ -11,7 +11,7 @@
 
 <nav class="navbar navbar-default navbar-fixed-top">
 	<div class="navbar-header">
-	<a class="navbar-brand" href="#">ShitChat</a>
+	<a class="navbar-brand" href="#"><strong>ShitChat</strong></a>
 	</div>
   <div class="container">
     <ul class="nav navbar-nav">
