--- a/templates/walls.html
+++ b/templates/walls.html
@@ -10,7 +10,7 @@
 
 <nav class="navbar navbar-default navbar-fixed-top">
 	<div class="navbar-header">
-	<a class="navbar-brand" href="#">ShitChat</a>
+	<a class="navbar-brand" href="#"><strong>ShitChat</strong></a>
 	</div>
   <div class="container">
     <ul class="nav navbar-nav">
