added about, played with login and register a little, linked buttons in app.py

--- a/templates/login.html
+++ b/templates/login.html
@@ -27,8 +27,11 @@
 <body style="padding-top:70px; background-image:url('./static/TextureUseamlessUtileUfloorUbu.jpg');">
 <div class="container-fluid">
 
-<center><div class="jumbotron" style="max-width:730px; background-color: #0B3861;">
-        <h2>Log In</h2><br>
+<div class="col-lg-3"><p></p></div>
+
+<div class="col-lg-6">
+<div class="jumbotron" style="max-width:730px; background-color: #0B3861;">
+        <center><h2>Log In</h2><br>
         <form role="form" class="form-horizontal" method="POST">
           <div class="form-group">
         	   <p><input type="text" class="form-control" name="email" placeholder="Email"></p>
@@ -44,3 +47,10 @@
         </div>
         </form>
     </div>
+
+</div>
+
+</div>
+</body>
+
+</html>
