--- a/templates/register.html
+++ b/templates/register.html
@@ -26,7 +26,10 @@
 
 <body style="padding-top:70px; background-image:url('./static/TextureUseamlessUtileUfloorUbu.jpg');">
 <div class="container-fluid">
-<center>
+
+<div class="col-lg-3"><p></p></div>
+
+<div class="col-lg-6">
  <div class="jumbotron" style="max-width:730px; background-color: #0B3861;">
 	<center>
         <h2>Sign Up</h2>
@@ -58,5 +61,6 @@
 </center>
  </form>
  </div>
+</div>
  </body>
  </html>
