slight about change

--- a/templates/about.html
+++ b/templates/about.html
@@ -33,11 +33,10 @@
 <div class="jumbotron" style="background-color: #0B3861;">
        <center> <h2>About</h2></center><br>
 
-	<p>
-	What's Poopin'?<br>
-
-An experiment in excellence, by Coby Goldberg, Cooper Weaver, Kyler Chase, and Julian Kal, to connect the nearly 25 million people pooping at any given moment in this world.
-	</p>
+	<p><center>
+	    At any given moment, <b><font size="5">25 million people around the world are pooping</b></font>, more than 40 times the population of Wyoming. With over 1 million apps available and more than 10,000 magazines circulating in 2014, there exists a <b><font size="5">paradox of choice</b></font>, preventing consumers from effectively using that precious daily time. We at ShitChat have a dream of creating an <b><font size="5">online community of the world's shitters</b></font>, in which they can enjoy each others company while in the privacy of their own bathroom. Whether in <b><font size="5">direct chats with friends</b></font>, or in the <b><font size="5"> public virtual stall walls</b></font>, our users can enjoy unprecedented access to the international shitting community.<br><br>
+	  <b><font size="8">  What's Poopin'? </b></font>
+	</center></p>
         
     </div>
 
