--- a/templates/canvas.html
+++ b/templates/canvas.html
@@ -7,12 +7,16 @@
 		<div class="panel-body">
 			<ul class="list-group">
 				<li class="list-group-item">
+					<h2> Name of Doodle </h2>
+					<h4> Contributors </h4>
+				</li>
+				<li class="list-group-item">
 					<div style:"border:3px solid" id = "edit" width="100">
 						Click here to edit
 					</div>
 				</li>
 				<li class="list-group-item">
-					<center><canvas style="border:3px solid" id="c" width="900" height="500"></canvas></center>
+					<center><canvas style="border:3px solid" id="c" width="100%" height="500"></canvas></center>
 				</li>
 				<li class="list-group-item">
 					<div class="well well-sm">
