--- a/templates/canvas.html
+++ b/templates/canvas.html
@@ -16,16 +16,17 @@
 					</div>
 				</li>
 				<li class="list-group-item">
-					<center><canvas style="border:3px solid" id="c" width="100%" height="500"></canvas></center>
+					<center><canvas style="border:3px solid" id="c" width="600" height="500"></canvas></center>
 				</li>
 				<li class="list-group-item">
-					<div class="well well-sm">
+					<div class="well well-sm" id="tools">
+						<img 
+							src='https://lh4.ggpht.com/lcydxe9aTLvDT5flQ4PldQQswbnrC0tR4IIpTQjPr5PI2fSSvHhlc3ENf2B6DyGZOIY=w300' 
+							id='eraser' width='100'>
 						<img 
 					    	src="http://www.wpclipart.com/education/supplies/markers/text_marker_drawing_orange.svg"
 					     	id="marker" width="100">
-					  	<img 
-					    	src="https://lh4.ggpht.com/lcydxe9aTLvDT5flQ4PldQQswbnrC0tR4IIpTQjPr5PI2fSSvHhlc3ENf2B6DyGZOIY=w300" 
-					     	id="eraser" width="100">	  
+					  	  
 					</div>
 				</li>
 			</ul>    
