--- a/templates/canvas.html
+++ b/templates/canvas.html
@@ -26,6 +26,15 @@
 						<img 
 					    	src="http://www.wpclipart.com/education/supplies/markers/text_marker_drawing_orange.svg"
 					     	id="marker" width="100">
+					    <img 
+					    	src='http://upload.wikimedia.org/wikipedia/commons/thumb/9/92/Circle-green.svg/512px-Circle-green.svg.png' width='50' 
+					    	id='green' style="visibility:hidden"> 
+                        <img 
+                        	src ='http://upload.wikimedia.org/wikipedia/commons/thumb/6/66/Circle-red.svg/512px-Circle-red.svg.png' width='50' 
+                        	id='red' style="visibility:hidden">
+                       	<img 
+                       		src ='http://upload.wikimedia.org/wikipedia/commons/thumb/4/43/Circle-blue.svg/2000px-Circle-blue.svg.png' width='50' 
+                       		id='blue' style="visibility:hidden">
 					  	  
 					</div>
 				</li>
