small styling check

--- a/templates/stall.html
+++ b/templates/stall.html
@@ -79,7 +79,7 @@
 
 
 <div class="col-lg-3">
-<div class="jumbotron" style="background: rgba(100, 100, 100, 0.1); border: 0px; margin-left: 30px; height: 100%; overflow: scroll;">
+<div class="jumbotron" style="background: rgba(100, 100, 100, 0.1); border: 0px; margin-left: 50px; margin-right: 0px height: 100%; overflow: scroll;">
 <center><h3>Rules:<h3></center>
 <h5>Some shit over here to even it out</h5>
 <h5>Contributers: 1234532</h5>
