--- a/templates/canvas.html
+++ b/templates/canvas.html
@@ -41,6 +41,6 @@
 			</ul>    
 		</div>
 		<img hidden src="#" id="saved">
-	    <script src="canvas.js"></script>
+		<script src="{{ url_for('static',filename='js/canvas.js') }}"></script>
 	</body> 
 </html>
