--- a/templates/create.html
+++ b/templates/create.html
@@ -19,7 +19,7 @@
 	<li><a href="/walls">Walls <span class="sr-only">(current)</span></a></li>
     </ul>
 	<span style="line-height:5px;">
-	<form class="navbar-form navbar-left" role="search">
+	<form class="navbar-form navbar-left" role="search" method="POST">
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search for a Wall" name="name" style="width:150px;">
         </div>
@@ -29,7 +29,7 @@
 	</span>
     <span style="line-height:5px;">
           <form class="navbar-form navbar-right" method="POST">
-	    <p class="navbar-text">Logged in as Pooper123 {{ session['username'] }}</p>
+	    <p class="navbar-text">Logged in as {{ session['first_name'] }} {{session['last_name']}}</p>
             <input type="submit" name="b" class="btn btn-danger" value="Log Out">
           </form>
 	</span>
