--- a/templates/create.html
+++ b/templates/create.html
@@ -23,7 +23,7 @@
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search for a Wall" name="name" style="width:150px;">
         </div>
-        <input type="submit" name="b" class="btn btn-success" value="search">
+        <input type="submit" name="b" class="btn btn-success" value="Search">
 	<input type="submit" name="b" class="btn btn-info" value="Create a Wall!">
       </form>
 	</span>
